Clarify pif file in readme and update version no. Fix default no of modules

--- a/demo/lightcurve_walkthrough.ipynb
+++ b/demo/lightcurve_walkthrough.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "7beca221",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "9b647e5a",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'REVOL': 2559, 'SWID': '255900280010', 'TSTART': 8320.63230042977, 'TSTOP': 8320.6736661982, 'TELAPSE': 3573.9999511221, 'OBT_TSTART': '00009111764710981632', 'OBT_TSTOP': '00009111768458592256', 'RA_SCX': 286.822875976562, 'DEC_SCX': 20.2762775421143, 'RA_SCZ': 199.37516784668, 'DEC_SCZ': -6.87311124801636, 'SRC_RA': None, 'SRC_DEC': None, 'Source_Name': None, 'cod': None, 'No_Modules': 8}\n",
+      "{'REVOL': 2559, 'SWID': '255900280010', 'TSTART': 8320.63230042977, 'TSTOP': 8320.6736661982, 'TELAPSE': 3573.9999511221, 'OBT_TSTART': '00009111764710981632', 'OBT_TSTOP': '00009111768458592256', 'RA_SCX': 286.822875976562, 'DEC_SCX': 20.2762775421143, 'RA_SCZ': 199.37516784668, 'DEC_SCZ': -6.87311124801636, 'SRC_RA': None, 'SRC_DEC': None, 'Source_Name': None, 'cod': None, 'No_Modules': [1, 1, 1, 1, 1, 1, 1, 1]}\n",
       "{'REVOL': 2559, 'SWID': '255900280010', 'TSTART': 8320.63230042977, 'TSTOP': 8320.6736661982, 'TELAPSE': 3573.9999511221, 'OBT_TSTART': '00009111764710981632', 'OBT_TSTOP': '00009111768458592256', 'RA_SCX': 286.822875976562, 'DEC_SCX': 20.2762775421143, 'RA_SCZ': 199.37516784668, 'DEC_SCZ': -6.87311124801636, 'Source_ID': 'SGR1935', 'Source_Name': 'SGR1935', 'SRC_RA': 293.731994628906, 'SRC_DEC': 21.8967208862305, 'cod': np.float64(0.7744360902255639), 'No_Modules': array([0, 0, 1, 1, 1, 1, 1, 1])}\n"
      ]
     }
