Add tests for rebin by module

--- a/demo/lightcurve_walkthrough.ipynb
+++ b/demo/lightcurve_walkthrough.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "69106f8b",
    "metadata": {},
    "outputs": [
@@ -251,11 +251,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw chisq reduced: 8.11\n",
-      "Clipped chisq reduced: 0.82\n",
-      "GTI chisq reduced: 8.05\n",
-      "Module variability: [ 1.7798905  1.9385959  9.868956  10.112125  10.713058  11.080585\n",
-      "  9.421991   9.954155 ]\n"
+      "Raw chisq reduced: 10.04\n",
+      "Clipped chisq reduced: 1.00\n",
+      "GTI chisq reduced: 10.03\n",
+      "Module variability: (array([ 6359.549,  6926.603, 35261.777, 36130.625, 38277.758, 39590.93 ,\n",
+      "       33664.773, 35566.195], dtype=float32), array([2942, 3025, 3567, 3568, 3568, 3568, 3568, 3567]), array([ 6185.0806,  6649.9795, 91052.58  , 93023.62  , 97074.28  ,\n",
+      "       96712.97  , 91139.47  , 85202.89  ], dtype=float32))\n"
      ]
     }
    ],
@@ -389,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
