Add typing hints and improve docstrings

--- a/demo/scwquery_walkthrough.ipynb
+++ b/demo/scwquery_walkthrough.ipynb
@@ -7,9 +7,7 @@
    "source": [
     "# INTEGRAL SCW Catalog Query Tutorial\n",
     "\n",
-    "This notebook demonstrates how to query and analyze INTEGRAL Science Window (SCW) catalogs using the `ScwQuery` class.\n",
-    "\n",
-    "## What is a Science Window (SCW)?\n",
+    "This notebook demonstrates how to query and analyze INTEGRAL Science Window (ScW) catalogs using the `ScwQuery` class.\n",
     "\n",
     "A Science Window is INTEGRAL's basic observational unit, typically lasting 30-60 minutes. Each SCW contains:\n",
     "- **Pointing information**: Where the satellite was looking (RA, Dec)\n",
@@ -108,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3e899fd8",
+   "id": "2db184c0",
    "metadata": {},
    "outputs": [
     {
@@ -117,61 +115,119 @@
      "text": [
       "SCWs before 2010-01-01: 65863\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SCWs after 2011-01-01: 132310\n",
-      "SCWs not between 2010-01-01 and 2011-01-01: 198173\n",
-      "SCWs between 2010-01-01 and 2011-01-01: 9956\n",
-      "SCWs between IJD 2000.0 and 2500.0: 11985\n",
-      "SCWs between MJD 53544.0 and 54044.0: 11985\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ScwQuery(catalog=summary2.fits, total=208127, selected=208127, filters=[])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Select ScWs before 2010-01-01\n",
     "scws_pre2010 = cat.time(tstop=\"2010-01-01\").get()\n",
-    "print(f\"SCWs before 2010-01-01: {len(scws_pre2010)}\")\n",
-    "\n",
     "cat.reset()\n",
-    "\n",
+    "print(f\"SCWs before 2010-01-01: {len(scws_pre2010)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7e469560",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SCWs after 2011-01-01: 132310\n"
+     ]
+    }
+   ],
+   "source": [
     "# Select Scws after 2011-01-01\n",
     "scws_post2011 = cat.time(tstart=\"2011-01-01\").get()\n",
-    "print(f\"SCWs after 2011-01-01: {len(scws_post2011)}\")\n",
-    "\n",
     "cat.reset()\n",
-    "\n",
+    "print(f\"SCWs after 2011-01-01: {len(scws_post2011)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f6b27879",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SCWs not between 2010-01-01 and 2011-01-01: 198173\n"
+     ]
+    }
+   ],
+   "source": [
     "# Select ScWs not between 2010-01-01 and 2011-01-01 -- ScwQuery does not support NOT queries directly, but the result can be obtained by combining two queries\n",
     "from astropy.table import vstack\n",
     "\n",
     "scws_not_2010_2011 = vstack([scws_pre2010, scws_post2011])\n",
-    "print(f\"SCWs not between 2010-01-01 and 2011-01-01: {len(scws_not_2010_2011)}\")\n",
-    "\n",
+    "print(f\"SCWs not between 2010-01-01 and 2011-01-01: {len(scws_not_2010_2011)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5be475ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SCWs between 2010-01-01 and 2011-01-01: 9956\n"
+     ]
+    }
+   ],
+   "source": [
     "# ScWs between 2010-01-01 and 2011-01-01\n",
     "scws_2010_2011 = cat.time(tstart=\"2010-01-01\", tstop=\"2011-01-01\").get()\n",
-    "print(f\"SCWs between 2010-01-01 and 2011-01-01: {len(scws_2010_2011)}\")\n",
     "cat.reset()\n",
     "\n",
+    "print(f\"SCWs between 2010-01-01 and 2011-01-01: {len(scws_2010_2011)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c631df8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SCWs between IJD 2000.0 and 2500.0: 11985\n"
+     ]
+    }
+   ],
+   "source": [
     "# Alternatively, IJD or MJD times can be used.\n",
     "scws_ijd = cat.time(tstart=2000.0, tstop=2500.0).get()\n",
-    "print(f\"SCWs between IJD 2000.0 and 2500.0: {len(scws_ijd)}\")\n",
     "cat.reset()\n",
-    "\n",
+    "print(f\"SCWs between IJD 2000.0 and 2500.0: {len(scws_ijd)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cf80316c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SCWs between MJD 53544.0 and 54044.0: 11985\n"
+     ]
+    }
+   ],
+   "source": [
     "scws_mjd = cat.time(tstart=(2000 + 51544.0), tstop=(2500 + 51544.0)).get()  # MJD = IJD + 51544.0\n",
-    "print(f\"SCWs between MJD 53544.0 and 54044.0: {len(scws_mjd)}\")\n",
-    "cat.reset()"
+    "cat.reset()\n",
+    "print(f\"SCWs between MJD 53544.0 and 54044.0: {len(scws_mjd)}\")"
    ]
   },
   {
@@ -184,7 +240,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
+   "id": "890e82e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SCWs in revolution 500: 59, min_rev: 500, max_rev: 500\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select ScWs from revolution 500\n",
+    "rev500 = cat.revolution(500).get()\n",
+    "cat.reset()\n",
+    "print(f\"SCWs in revolution 500: {len(rev500)}, min_rev: {rev500['REVOL'].min()}, max_rev: {rev500['REVOL'].max()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "72c34f6f",
    "metadata": {},
    "outputs": [
@@ -192,36 +269,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SCWs in revolution 500: 59, min_rev: 500, max_rev: 500\n",
+      "Revolutions to select: [500, 501, 502, 503, 504, 505, 506, 507, 508, 509, 510]\n",
       "SCWs in revolutions 500 to 510: 538, min_rev: 500, max_rev: 510\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ScwQuery(catalog=summary2.fits, total=208127, selected=208127, filters=[])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Select ScWs from revolution 500\n",
-    "rev500 = cat.revolution(500).get()\n",
-    "print(f\"SCWs in revolution 500: {len(rev500)}, min_rev: {rev500['REVOL'].min()}, max_rev: {rev500['REVOL'].max()}\")\n",
-    "\n",
-    "cat.reset()\n",
-    "\n",
     "# Select ScWs from revolutions 500 to 510\n",
     "revs = np.arange(500, 511).tolist()\n",
+    "print(f\"Revolutions to select: {revs}\")\n",
     "rev500_510 = cat.revolution(revs).get()\n",
+    "cat.reset()\n",
     "print(\n",
     "    f\"SCWs in revolutions 500 to 510: {len(rev500_510)}, min_rev: {rev500_510['REVOL'].min()}, max_rev: {rev500_510['REVOL'].max()}\"\n",
-    ")\n",
-    "\n",
-    "cat.reset()"
+    ")"
    ]
   },
   {
@@ -234,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "bfe4b346",
    "metadata": {},
    "outputs": [
@@ -256,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "4bfa3438",
    "metadata": {},
    "outputs": [
@@ -278,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "5cb9c104",
    "metadata": {},
    "outputs": [
@@ -307,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "0daf9191",
    "metadata": {},
    "outputs": [],
@@ -318,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "0ddc0d35",
    "metadata": {},
    "outputs": [
@@ -339,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "8a4c854b",
    "metadata": {},
    "outputs": [
@@ -362,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "1ffc47bd",
    "metadata": {},
    "outputs": [
@@ -386,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "72c95e94",
    "metadata": {},
    "outputs": [
@@ -416,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "62688457",
    "metadata": {},
    "outputs": [
@@ -437,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "c438ab4a",
    "metadata": {},
    "outputs": [
@@ -466,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "f3735d7a",
    "metadata": {},
    "outputs": [
@@ -494,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "08a3df8b",
    "metadata": {},
    "outputs": [
@@ -527,17 +588,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "c3812a4c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x79f666b51de0>"
+       "<matplotlib.collections.PathCollection at 0x784cb907dd50>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -581,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "364d53de",
    "metadata": {},
    "outputs": [
@@ -618,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "dc5f1b43",
    "metadata": {},
    "outputs": [
